--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary" >
 
   <div class="container-fluid" >
+    <div class="nav-head">
     <a class="navbar-brand" href="#" style="color:#1a21c9;"><b>M.Inshad</b></a>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    </div>
+    <div class="nav-button" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#section1">Home</a>
